@@ -74,8 +74,8 @@ class attrs(unittest.TestCase):
 		self.assertEquals(hasattr(ui, "STOCK_EDIT"), True)
 		self.assertEquals(hasattr(ui, "STOCK_EXPORT"), True)
 		self.assertEquals(hasattr(ui, "STOCK_GENERATE"), True)
+		self.assertEquals(hasattr(ui, "STOCK_GOTO"), True)
 		self.assertEquals(hasattr(ui, "STOCK_IMPORT"), True)
-		self.assertEquals(hasattr(ui, "STOCK_LAUNCH"), True)
 		self.assertEquals(hasattr(ui, "STOCK_LOCK"), True)
 		self.assertEquals(hasattr(ui, "STOCK_NEXT"), True)
 		self.assertEquals(hasattr(ui, "STOCK_OVERWRITE"), True)
